--- a/WiseSingleLife/pom.xml
+++ b/WiseSingleLife/pom.xml
@@ -21,6 +21,12 @@
 	   </repository>
 	</repositories>
 	<dependencies>
+		<!-- mongodb -->
+		<dependency>
+		    <groupId>org.springframework.data</groupId>
+		    <artifactId>spring-data-mongodb</artifactId>
+		    <version>1.9.1.RELEASE</version>
+		</dependency>
 		<!-- JSON Parser -->
 		<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
 		<dependency>
@@ -40,6 +46,12 @@
 			<groupId>org.jsoup</groupId>
 		 	<artifactId>jsoup</artifactId>
 			<version>1.13.1</version>
+		</dependency>
+		<!-- mongodb -->
+		<dependency>
+		    <groupId>org.springframework.data</groupId>
+		    <artifactId>spring-data-mongodb</artifactId>
+		    <version>1.9.1.RELEASE</version>
 		</dependency>
 		<!-- Spring -->
 		<dependency>
