--- a/WiseSingleLife/pom.xml
+++ b/WiseSingleLife/pom.xml
@@ -22,6 +22,11 @@
 	</repositories>
 	<dependencies>
 		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			 <artifactId>gson</artifactId>
+			 <version>2.8.0</version>
+		</dependency>
+		<dependency>
 		    <groupId>org.springframework.data</groupId>
 		    <artifactId>spring-data-mongodb</artifactId>
 		    <version>1.9.1.RELEASE</version>
