--- a/WiseSingleLife/pom.xml
+++ b/WiseSingleLife/pom.xml
@@ -22,6 +22,11 @@
 	</repositories>
 	<dependencies>
 		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			 <artifactId>gson</artifactId>
+			 <version>2.8.0</version>
+		</dependency>
+		<dependency>
 		    <groupId>org.springframework.data</groupId>
 		    <artifactId>spring-data-mongodb</artifactId>
 		    <version>1.9.1.RELEASE</version>
@@ -165,16 +170,16 @@
          <artifactId>mybatis-spring</artifactId>
          <version>1.2.2</version>
       </dependency>
-      <!-- <dependency>
+      <dependency>
          <groupId>org.mongodb</groupId>
          <artifactId>mongo-java-driver</artifactId>
          <version>2.13.0-rc1</version>
-      </dependency> -->
-      <dependency>
+      </dependency>
+      <!-- <dependency>
 	    <groupId>org.mongodb</groupId>
 	    <artifactId>mongo-java-driver</artifactId>
 	    <version>2.10.1</version>
-	</dependency>
+	</dependency> -->
       
       <dependency>
          <groupId>org.nuiton.thirdparty</groupId>
