--- a/WiseSingleLife/pom.xml
+++ b/WiseSingleLife/pom.xml
@@ -22,6 +22,11 @@
 	</repositories>
 	<dependencies>
 		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			 <artifactId>gson</artifactId>
 			 <version>2.8.0</version>
